# bus_occupancy

./: LICENSE  README.md  pyproject.toml
app/: m.py  main.py  sample_video.py  vizualize_motion.py
notebooks/: background.ipynb
